--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
     position: relative;
     transform: translateX(-8000px);
     transition: transform 4s ease-in-out;
+    margin-bottom: 100px;
 }
 .img-1 img{
     width:60%;
@@ -83,7 +84,7 @@ body {
 .saludo{
  color: rgb(250,250,250);
  text-align: center;
- font-size: 3rem;
+ font-size: 5rem;
 }
 input[type="text"]{
     width: 10rem;
@@ -96,13 +97,13 @@ input::placeholder{
 h5{
     display: block;
     position: absolute;
-   bottom: 20%;
-   left: 1%;
-   margin: auto;
-   width: 90%;
-   font-size: 8rem;
-   font-weight: 800;
-   animation: visible 3s infinite;
+    bottom: 20%;
+    margin: auto;
+    width: 60%;
+    color: #e30052;
+    font-size: 6rem;
+    font-weight: 800;
+    animation: visible 3s infinite;
 }
 @keyframes visible {
     20%,60%,90%{
@@ -124,14 +125,28 @@ h5.hidden{
     .titulo{
         font-size: 10rem;
     }
+    h5{
+        font-size: 10rem;
+        width: 75%;
+        right: 1px;
+    }
 }
 @media screen and (min-width: 1024px){
     .img-1{
         width: 60%;
         height: 50%;
-        margin-bottom: 100px;
     }
     .img-1 img{
         width: 50%;
+    }
+    h5{
+        bottom: 30%;
+        left: 18%;
+        font-size: 6rem;
+    }
+}
+@media screen and (max-width: 280px){
+    h5{
+           font-size: 4rem;
     }
 }
